@@ -1,0 +1,26 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+
+    <Name>Mapping-Constructors-With-Enum</Name>
+    <Author>Werner Guttmann</Author>
+
+    <Comment>
+        Tests the special handling of constructor arguments in the case where one or more
+        arguments are of type 'enum'.
+    </Comment>
+
+    <Category>basic capability</Category>
+
+    <MarshallingTest>
+        <Root_Object>SimpleMessage</Root_Object>
+
+        <UnitTestCase>
+            <Name>Test01</Name>
+            <Mapping_File>mapping.xml</Mapping_File>
+            <Input>input.xml</Input>
+            <GoldFile>input.xml</GoldFile>
+        </UnitTestCase>
+
+    </MarshallingTest>
+
+</TestDescriptor>
